# playground

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  index.rst  install.rst
playground/: add.py  multiply.py  numpy_dep.py  subtract.py
test/: test_add.py
