[project]
name = "playground"
dynamic = ["version"]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=6.1.2",
    "pytest-runner"
]

[tools.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

#[tool.setuptools.package-data]
#playground = ["py.typed"]

