[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools_scm>=6.0.1",
    "wheel>=0.36.2"
]

[project]
name = "playground"
dynamic = ["version"]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=6.1.2",
    "pytest-runner"
]

[tools.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

#[tool.setuptools.package-data]
#playground = ["py.typed"]

